--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemailer": "^6.9.16",
     "react": "^19.0.0-rc-02c0e824-20241028",
     "react-dom": "^19.0.0-rc-02c0e824-20241028",
+    "react-icons": "^5.3.0",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   }
