--- a/.gitignore
+++ b/.gitignore
@@ -11,29 +11,29 @@
 # testing
 /coverage
 
-# next.js
+# next.js build output
 /.next/
 /out/
 
-# production
+# production build
 /build
 
 # misc
 .DS_Store
 *.pem
 
-# debug
+# debug logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# vercel
+# Vercel deployment files
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
 
-# Allow .env.local and SQLite database file to be tracked
-!/.env.local
-!/lib/database.sqlite
+# Allow .env.local and database.sqlite to be tracked
+!.env.local  # Track .env.local (be careful, sensitive data!)
+!lib/database.sqlite  # Track SQLite database file (again, be careful)
