--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,3 @@
-DATABASE_URL=./lib/database.sqlite
+DATABASE_URL=postgres://neondb_owner:tBv4iLQCHM9J@ep-snowy-darkness-a2nfi7so-pooler.eu-central-1.aws.neon.tech/neondb?sslmode=require
 
-
-
-
-JWT_SECRET=your_jwt_secret
+JWT_SECRET=your_jwt_secret_key
