--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.7",
+    "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.0.2",
     "nodemailer": "^6.9.16",
