--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "initDb": "node initDb.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.7",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
-    "module": "^1.2.5",
     "next": "^15.0.2",
     "nodemailer": "^6.9.16",
     "pg": "^8.13.1",
